[workspace]
resolver = "2"
members = [
    "mcp-sh",
    "mcp-fs",
    "mcp-cc",
    "mcp-flow",
    "mcp-think",
    "mcp-ws",
    "mcp-py",
    "mcp-html-studio",
    "mcp-git",
    "mcp-http",
    "mcp-db",
]

[workspace.dependencies]
rmcp         = { version = "2", features = ["server", "macros", "transport-io", "schemars"] }
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
anyhow       = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars     = "0.8"
rusqlite     = { version = "0.31", features = ["bundled"] }
reqwest      = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
base64       = "0.22"
flate2       = "1"
zip          = "2"
sha2         = "0.10"
md-5         = "0.10"
walkdir      = "2"
regex        = "1"
axum         = { version = "0.7", features = ["ws"] }
tower-http   = { version = "0.5", features = ["fs", "cors"] }
axum-extra   = "0.9"
notify       = "6"
tempfile     = "3"
chrono       = { version = "0.4", features = ["serde"] }
clap         = { version = "4", features = ["derive"] }
