[project]
name = "mcp-context-kv-cache"
version = "3.0.0"
description = "Advanced key‑value cache server with TTL, sessions, batch ops, compression, and semantic search"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mcp>=1.9.4", "aiofiles>=23.2.0"]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.2.0"]
sqlite = []
tokens = ["tiktoken>=0.5.0"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
mcp-cc = "server:main"
