[project]
name = "mcp-flow"
version = "1.0.0"
description = "MCP server for managing automated workflows: memory, plans, execution tracking, and recovery."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mcp>=1.9.4"]

[project.optional-dependencies]
semantic = ["sentence-transformers>=2.2.0", "torch>=2.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
