[project]
name = "mcp-fs"
version = "3.0.0"
description = "MCP file system server with 20+ tools, sessions, compression, and token counting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.9.4",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
tokens = ["tiktoken>=0.5.0"]
semantic = ["sentence-transformers>=2.2.0"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
mcp-fs = "server:main"
