[project]
name = "mcp-html-studio"
version = "1.0.0"
description = "State-of-the-art MCP server for generating, previewing, and editing interactive HTML/CSS/JS projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.9.4",
  "aiohttp>=3.9.0",
  "aiofiles>=23.2.0",
  "watchfiles>=0.21.0",
]

[project.optional-dependencies]
llm = ["openai>=1.0.0", "anthropic>=0.18.0"]
screenshot = ["playwright>=1.40.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
