[package]
name = "mcp-http"
version = "0.1.0"
edition = "2021"
description = "HTTP client for REST API calls and web interactions"

[dependencies]
rmcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
schemars = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
