[project]
name = "mcp-py"
version = "1.0.0"
description = "Secure MCP server to run Python code in a sandboxed environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.27.2",
  "resource",    # built-in
]

[project.optional-dependencies]
docker = ["docker>=6.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
