[package]
name = "mcp-sh"
version = "0.1.0"
edition = "2021"
description = "Sandboxed bash shell executor"

[dependencies]
rmcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
schemars = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
regex = { workspace = true }
