[project]
name = "mcp-sh"
version = "0.1.0"
description = "MCP server for shell access"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["aiofiles>=25.1.0", "mcp>=1.9.4"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
mcp-sh = "server:main"
