[package]
name = "mcp-think"
version = "0.1.0"
edition = "2021"
description = "Structured reasoning engine with assumptions and contradiction detection"

[dependencies]
rmcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
schemars = { workspace = true }
rusqlite = { workspace = true }
