[project]
name = "mcp-think"
version = "1.0.0"
description = "State-of-the-art MCP server for structured reasoning, assumption tracking, and self-evaluation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mcp>=1.9.4"]

[project.optional-dependencies]
rerank = ["openai>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
mcp-think = "server:main"
