[package]
name = "mcp-ws"
version = "0.1.0"
edition = "2021"
description = "Web search and content fetching"

[dependencies]
rmcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
schemars = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
