[project]
name = "mcp-ws"
version = "3.0.0"
description = "MCP web search server: 10+ engines, image search, PDF parsing, semantic reranking"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.9.4",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "trafilatura>=1.6.0",
    "lxml>=4.9.0",
    "cachetools>=5.3.0",
    "python-dotenv>=1.0.0",
    "pypdf>=3.8.0",
]

[project.optional-dependencies]
semantic = ["sentence-transformers>=2.2.0", "torch>=2.0.0"]
llm = ["openai>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
mcp-ws = "server:main"
